Reimplement (in 2.x way) the ability to edit toolbar

BUG: 312340